# war-room

./: .gitignore  CLAUDE.md  README.md  design.md  progress.md  pyproject.toml
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: atoms.tsx  roster.tsx
frontend/lib/: api.ts  draft.ts  strategy.ts
src/: __init__.py  config.py  names.py
src/api/: __init__.py  main.py  service.py
src/decision/: __init__.py  arbitrage.py  blend.py  board.py  replacement.py  strategy.py  tiers.py
src/features/: __init__.py  build.py  panel.py
src/formats/: __init__.py  base.py  redraft_ppr.py  score.py  superflex.py
src/ingest/: __init__.py  adp.py  cache.py  espn_league.py  refresh.py  sources.py
src/projections/: __init__.py  pipeline.py  run.py  special.py  uncertainty.py
src/projections/baseline/: __init__.py  priors.py  project.py
src/projections/bayesian/: __init__.py  features.py  model.py  project.py
src/validation/: __init__.py  backtest.py  draft_sim.py  room_calibration.py  room_sim.py  strategy_sim.py
tests/: test_api.py  test_bayesian.py  test_blend.py  test_decision.py  test_draft_sim.py  test_espn_league.py  test_features.py  test_ingest.py  test_market.py  test_projections.py  test_room_calibration.py  test_smoke.py  test_special.py  test_strategy.py  test_uncertainty.py
