[project]
name = "war-room"
version = "0.1.0"
description = "Open-source fantasy football draft & analysis engine — derives its own projections from nflverse, wraps them in calibrated uncertainty, and turns them into format-aware draft decisions."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Shane Thakkar" }]

# Core runtime deps. Deliberately light: the transparent baseline pipeline must
# run end-to-end WITHOUT the Bayesian stack (see CLAUDE.md constraint #4). PyMC
# lives in the optional `bayesian` extra so `uv sync` stays fast and the baseline
# never depends on it.
dependencies = [
    "nflreadpy>=0.1.0",   # Polars-native nflverse loader (NOT nfl_data_py)
    "polars>=1.0.0",      # primary dataframe engine
    "pyarrow>=16.0.0",    # Parquet cache I/O
    "numpy>=1.26.0",      # baseline numerics
    "pandas>=2.2.0",      # only at boundaries that need it (e.g. PyMC input)
    "fastapi>=0.115.0",   # projection/decision API
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",      # Sleeper API client (ADP + live draft only)
]

[project.optional-dependencies]
# Swap-in hierarchical model. `uv sync --extra bayesian` to install.
bayesian = [
    "pymc>=5.16.0",
    # arviz 1.x (DataTree migration) drops InferenceData/concat that pymc 5.26 imports.
    "arviz>=0.18,<1.0",
    # Fast Rust NUTS - far quicker to compile and sample than PyMC's default on
    # Windows (the default made hierarchical fits take ~an hour). numba backend.
    "nutpie>=0.13",
    "numba>=0.60",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pandas-stubs>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify.
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

# Third-party packages without type stubs. Keep this list tight and prune as
# stubs become available.
[[tool.mypy.overrides]]
module = ["nflreadpy.*", "pymc.*", "arviz.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
